Updated file import modal to remove the http example if the http URL stream wrapper is not available [#1408 state:closed] Fixed the admin style of the file import modal to prevent line wrapping between the file import input and the attach button
git-svn-id: file:///Users/jond/svngit/svnrepos/shopp/trunk@2843 846ab242-8549-0410-9a75-dfdbdae9473e

--- a/shopp/core/ui/styles/admin.css
+++ b/shopp/core/ui/styles/admin.css
@@ -116,7 +116,7 @@ div.comment-item:hover .row-actions { visibility:visible; }
 #cboxContent p.submit { text-align:right; }
 #cboxContent label { display:inline-block;width:50px;text-align:right;margin-right:5px; }
 
-#cboxContent input.fileimport { padding-right:16px;width:80%; }
+#cboxContent input.fileimport { padding-right:16px;width:75%; }
 #cboxContent input.verifying { background:url('../icons/updating.gif') no-repeat right center; }
 #cboxContent input.warning { background:url('../icons/error.png') no-repeat right center; }
 #cboxContent input.ok { background:url('../icons/accept.png') no-repeat right center; }
